--- a/SARA ACT_CLASE02.ipynb
+++ b/SARA ACT_CLASE02.ipynb
@@ -198,7 +198,9 @@
    "cell_type": "code",
    "execution_count": 73,
    "id": "bccfd601-1d7b-4761-9b2e-0574bdc1d2fd",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -417,6 +419,14 @@
    ],
    "source": [
     "bt.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7fdede5-aa35-4035-9943-5599ac2af386",
+   "metadata": {},
+   "source": [
+    "Tenemos datos faltantes en la y (MEDV) con 452 datos y en la x tenemos 506. Tenemos que hacer una imputación o eliminar. Donde la imputación seria con media, patrones o moda. No sabemos cual de esos 3 todavia. "
    ]
   },
   {
@@ -1156,6 +1166,128 @@
     "results = ols.fit()\n",
     "print(results.summary())\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "d484222f-5279-4e27-b036-fad9adadf766",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entrenamiento:226\n",
+      "Prueba:226\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(42)\n",
+    "\n",
+    "# Seleccionar índices aleatorios sin reemplazo\n",
+    "train_indices = np.random.choice(datosclean2.index, size=len(datosclean2)//2, replace=False)\n",
+    "test_indices = datosclean2.index.difference(train_indices)\n",
+    "\n",
+    "train_data = datosclean2.loc[train_indices]\n",
+    "test_data = datosclean2.loc[test_indices]\n",
+    "\n",
+    "print(\"Entrenamiento:\" + str(len(train_data)))\n",
+    "print(\"Prueba:\" + str(len(test_data)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d6ccb19-7d3f-4823-bab6-35ad927533fe",
+   "metadata": {},
+   "source": [
+    "- train_data se quedó con 226 filas (la mitad elegida al azar).\n",
+    "- test_data se quedó con las otras 226 filas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "35586064-8234-45cd-be84-b9b3eae5b2ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coeficientes: [-0.09854666  0.18505763  0.07927844  0.05272181 -0.10563753  0.33290118\n",
+      "  0.06754975 -0.2881322   0.35777708 -0.299179   -0.17339473  0.11834927\n",
+      " -0.40448136]\n",
+      "Intercepto: -0.03651901043059266\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "\n",
+    "# Separar variables independientes y dependiente\n",
+    "X_train = train_data.drop(columns=['MEDV'])\n",
+    "y_train = train_data['MEDV']\n",
+    "X_test = test_data.drop(columns=['MEDV'])\n",
+    "y_test = test_data['MEDV']\n",
+    "\n",
+    "# Escalar X\n",
+    "scaler = StandardScaler().fit(X_train)\n",
+    "X_train_scaled = scaler.transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)  # Escalado usando parámetros de train\n",
+    "\n",
+    "# Ajustar regresión lineal\n",
+    "regresion = LinearRegression()\n",
+    "regresion.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "# Coeficientes e intercepto\n",
+    "print(\"Coeficientes:\", regresion.coef_)\n",
+    "print(\"Intercepto:\", regresion.intercept_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "4768ddef-f725-4d38-b5d8-e952173cdae8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE: 0.2882585936598951\n",
+      "R²: 0.7434635698013317\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Predicciones\n",
+    "y_pred = regresion.predict(X_test_scaled)\n",
+    "\n",
+    "# Evaluar modelo\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "print(\"MSE:\", mse)\n",
+    "print(\"R²:\", r2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86ff8666-95fc-4a1d-b76b-85496eb0a19f",
+   "metadata": {},
+   "source": [
+    "- MSE de 0.288, lo que indica que el error promedio al cuadrado entre las predicciones y los valores reales de MEDV es bastante bajo.\n",
+    "- R² fue de 0.743, lo que significa que el modelo explica aproximadamente el 74% de la variabilidad de los precios de las viviendas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7d00e83-1690-4511-94b1-11779e9368a6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
